# amman-python-401d3

./: .gitignore  README.md
class-01/: README.md
class-02/: DISCUSSION.md  README.md
class-03/: README.md
class-04/: README.md
class-05/: README.md  linked_list.py
class-06/: DISCUSSION.md  README.md
class-08/: Notes.md  README.md
class-09/: README.md
class-11/: README.md
class-12/: README.md
class-13/: README.md
class-16/: README.md
class-17/: README.md
class-18/: README.md
class-19/: README.md
class-20/: README.md
class-26/: README.md
class-27/: README.md  shape.excalidraw
class-28/: README.md
class-29/: README.md
class-31/: README.md
class-32/: README.md
class-32/demo/blogapi-permissions/: pyproject.toml
class-33/: DISCUSSION.md  README.md  auth.excalidraw
class-33/demo/snacks-from-scratch/: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
class-33/demo/snacks-from-scratch/snacks/: models.py  serializers.py  urls.py  views.py
class-33/demo/snacks-from-scratch/snacks/migrations/: 0001_initial.py
class-33/demo/snacks-from-scratch/snacks_project/: asgi.py  settings.py  urls.py  wsgi.py
class-34/demo/drf-snacks-api/: docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
class-34/demo/drf-snacks-api/snacks/: models.py  serializers.py  urls.py  views.py
class-34/demo/drf-snacks-api/snacks/migrations/: 0001_initial.py
class-34/demo/drf-snacks-api/snacks_api_project/: asgi.py  settings.py  urls.py  wsgi.py
class-35/: README.md  Replication.excalidraw  WRRC.excalidraw  graph.excalidraw
class-35/demo/: graph.py  pyproject.toml  test_graph.py
class-36/: README.md  dsa.excalidraw  fib.py
class-37/: DISCUSSION.md  README.md  react.excalidraw
class-38/: DISCUSSION.md  README.md
class-39/: DISCUSSION.md  README.md
class-41/: DISCUSSION.md  README.md
class-42/: DISCUSSION.md
(+97 files in other folders)
